# MetaCoqAnimation

./: .gitignore  GenRunStep8.v  GenRunStep_faulty.v  README.md  _CoqProject  animation2.v  animationFullEx.v  animationFullExProof.v  animation_simple.v  rocq-animation.opam  run_interp.v  run_tests.sh  testIndTerm2.v  typeCon.v  typeConNest2.v  utils.v
theories/: AnimationDispatch.v  AnimationEngine.v  AnimationResult.v  AnimationTypes.v  EqualityResolution.v  HoleyResult.v  MetaRocqUtils.v  PatternCompilation.v  TermUtils.v  TestLambdaCalc.v  TestList.v  TestNat.v  TestSTLC.v  addCstrExample.v  animationFullExProof.v  animationModules.v  animationModulesFixPt.v  animationModulesIntegration.v  animationModulesIntegration2.v  animationModulesIntegrationFixpt.v  animationModulesNotation.v  animationModulesPatMat.v  animationModulesPathNotation.v  animationModulesSimplEq.v  coIndPreProc.v  coIndPreProcSigma.v  testCases.v  testCases2.v  testing.v  testing2.v  testing3.v  testing4.v  testing5.v  testingGeneral.v  testingIndTp.v  testingSemantics4.v  typeConNest2.v  universal_quantif_pf.v  utils.v  utils2.v
theories/tests/: TestCoinductive.v  TestImp.v  TestLambdaCalc.v  TestList.v  TestNat.v  TestSTLC.v  TestSeparateDefs.v  TestStack.v
trash/: GenRunStep_faulty.v  animation2.v  animation_simple.v  mutRecFn.v  testCases.v  typeCon.v  typeConNest2.v  universal_quantif_pf.v
